2007-05-19  Jorn Baayen  <jorn@openedhand.com>

	* tools/gssdp-device-sniffer.glade:

	Fix about box closing.

2007-05-19  Zeeshan Ali  <zeenix@gstreamer.net>

	* tools/gssdp-device-sniffer.c: (init_ui):

	device-sniffer should test of the existance of the glade file itself,
	to avoid warning messages from libglade.

2007-05-16  Zeeshan Ali  <zeenix@gstreamer.net>

	* tools/gssdp-device-sniffer.c: (append_device),
	(resource_available_cb):

	Append the device to the device treeview even when all details are not
	yet known.
	
	* tools/gssdp-device-sniffer.glade:

	Fix the closing of dialog.

2007-05-15  Zeeshan Ali  <zeenix@gstreamer.net>

	reviewed by: Jorn Baayen  <jorn@openedhand.com>

	* tools/gssdp-device-sniffer.c: (packet_to_treeview_data),
	(on_enable_packet_capture_activate), (packet_to_treeview_data),
	(on_ssdp_message):
	* tools/gssdp-device-sniffer.glade:

	- Implement start/stop of packet capturing.
	- Ignore discovery request packets rather than response packets.
	- Minor UI fixes.

2007-05-11  Jorn Baayen  <jorn@openedhand.com>

	* AUTHORS: Added Zeeshan.

2007-05-11  Zeeshan Ali  <zeenix@gstreamer.net>

	* tools/gssdp-device-sniffer.c: (on_ssdp_message),
	(on_use_filter_radiobutton_toggled), (get_ip_filter),
	(on_address_filter_dialog_response), (init_ui), (init_upnp):
	* tools/gssdp-device-sniffer.glade:

	- Correctly handle delete-event.
	- Fix initial size of the window. 
	- Add support for IP-filtering of packets.
	- Do active the resource-browser.
	- Add copyright header.

2007-05-11  Zeeshan Ali  <zeenix@gstreamer.net>

	* tools/gssdp-device-sniffer.c: (append_device), (find_device),
	(update_device), (resource_available_cb), (remove_device),
	(resource_unavailable_cb), (create_packet_treemodel),
	(create_device_treemodel), (setup_treeview), (setup_treeviews),
	(init_upnp), (main):
	* tools/gssdp-device-sniffer.glade:
	
	- Remove unimplementable menu items and the associated callbacks.
	- Implement device view.