@@ -1,3 +1,11 @@
+2007-05-20  Zeeshan Ali  <zeenix@gstreamer.net>
+
+	* tools/gssdp-device-sniffer.c: (append_device),
+	(resource_available_cb), (create_device_treemodel),
+	(setup_treeviews):
+
+	Replace 'Notify' and 'Last Notify' fields with 'First Notify'.
+
 2007-05-19  Jorn Baayen  <jorn@openedhand.com>
 
 	* tools/gssdp-device-sniffer.glade:
